--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 
 {% block title %}Login - Homestay Booking{% endblock %}
 
@@ -57,4 +57,4 @@
     border-bottom: 1px solid #dee2e6;
 }
 </style>
-{% endblock %}
+{% endblock %} -->
