--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 {% block title %}Register - Homestay Booking{% endblock %}
 
 {% block content %}
@@ -130,5 +130,5 @@
   border-bottom: 1px solid #dee2e6;
 }
 </style>
-{% endblock %}
+{% endblock %} -->
 
